--- a/src/control/lib/spdk/SConscript
+++ b/src/control/lib/spdk/SConscript
@@ -10,6 +10,9 @@ def scons():
 
     senv = denv.Clone()
     prereqs.require(senv, 'pmdk', 'spdk', 'ofi', 'hwloc')
+    if senv["CC"] == 'icx':
+        #Avoid need to link Intel libraries in go build
+        senv["CC"] = "gcc"
 
     senv.AppendUnique(CPPPATH=[join(Dir('.').srcnode().abspath, "include")])
     senv.AppendUnique(OBJPREFIX='s_')
