--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,11 +73,11 @@ jobs:
                           --build-arg COMPILER=${{ matrix.compiler }}
                           --build-arg DEPS_JOBS=8 --build-arg DAOS_JAVA_BUILD=no
                           --build-arg BASE_DISTRO=fedora:34
-    - name: Build DAOS Java client in Docker image
-      run: docker build . -f utils/docker/Dockerfile.centos.8
-                          --build-arg COMPILER=${{ matrix.compiler }}
-                          --build-arg DEPS_JOBS=8
-                          --build-arg BASE_DISTRO=fedora:34
+#    - name: Build DAOS Java client in Docker image
+#      run: docker build . -f utils/docker/Dockerfile.centos.8
+#                          --build-arg COMPILER=${{ matrix.compiler }}
+#                          --build-arg DEPS_JOBS=8
+#                          --build-arg BASE_DISTRO=fedora:34
     - name: Build debug in docker
       run: docker build . --file utils/docker/Dockerfile.centos.8
                           --build-arg DAOS_JAVA_BUILD=no
