add CFLAGS for libdpdk in ubuntu build
Quick-build: true
PR-repos-el7: pyelftools@PR-1 dpdk@PR-15 spdk@PR-18
PR-repos-el8: dpdk@PR-15 spdk@PR-18
PR-repos-leap15: dpdk@PR-15 spdk@PR-18
PR-repos-ubuntu20: dpdk@PR-15 spdk@PR-18

--- a/debian/rules
+++ b/debian/rules
@@ -21,6 +21,8 @@ DEB_SCONS_OPTIONS := --config=force --no-rpath USE_INSTALLED=all \
                      $(SCONS_ARGS)
 
 export GOCACHE := $(CURDIR)/.gocache
+# https://github.com/spdk/spdk/issues/2011
+export DEB_CFLAGS_MAINT_APPEND = $(shell pkg-config --cflags libdpdk)
 
 %:
 	dh $@ --with-systemd
