Dropping "io" and "epc" from DD_MASK and adding "dsms".
Quick-Functional: true
Test-tag: volunit

Signed-off-by: Phillip Henderson <phillip.henderson@intel.com>

--- a/src/tests/ftest/daos_vol/daos_vol.yaml
+++ b/src/tests/ftest/daos_vol/daos_vol.yaml
@@ -11,7 +11,15 @@ job_manager_timeout: 900
 server_config:
     name: daos_server
     servers:
-        log_mask: DEBUG,VOS=ERR
+        log_mask: DEBUG
+        env_vars:
+            - "ABT_ENV_MAX_NUM_XSTREAMS=100"
+            - "ABT_MAX_NUM_XSTREAMS=100"
+            - "DAOS_MD_CAP=1024"
+            - "DD_MASK=mgmt,md,rebuild,dsms"
+            - "FI_SOCKETS_MAX_CONN_RETRY=5"
+            - "FI_SOCKETS_CONN_TIMEOUT=2000"
+            - "CRT_SWIM_RPC_TIMEOUT=10"
         bdev_class: nvme
         bdev_list: ["0000:81:00.0","0000:da:00.0"]
         scm_class: dcpm
