--- a/src/tests/ftest/fault_domain/fault_domain.yaml
+++ b/src/tests/ftest/fault_domain/fault_domain.yaml
@@ -6,7 +6,7 @@ hosts:
     - server-D
     - server-E
   test_clients:
-    - client-B
+    - client-A
 timeout: 600
 fault_path:
   - /fault1
@@ -20,29 +20,28 @@ server_config:
     scm_size: 128
     bdev_class: nvme
     bdev_list: [ "aaaa:aa:aa.a"]
-test_pools:
-  - pool_0:
-      name: daos_server
-      size: 9G
-      nranks: 1
-      control_method: dmg
-  - pool_1:
-      name: daos_server_2
-      size: 27G
-      nranks: 3
-      control_method: dmg
-  - pool_2:
-      name: daos_server_2
-      size: 27G
-      nranks: 3
-      control_method: dmg
-  - pool_3:
-      name: daos_server_3
-      size: 18G
-      nranks: 2
-      control_method: dmg
-  - pool_4:
-      name: daos_server_4
-      size: 18G
-      nranks: 2
-      control_method: dmg
+pool_0:
+  name: daos_server
+  size: 9G
+  nranks: 1
+  control_method: dmg
+pool_1:
+  name: daos_server
+  size: 27G
+  nranks: 3
+  control_method: dmg
+pool_2:
+  name: daos_server
+  size: 27G
+  nranks: 3
+  control_method: dmg
+pool_3:
+  name: daos_server
+  size: 18G
+  nranks: 2
+  control_method: dmg
+pool_4:
+  name: daos_server
+  size: 18G
+  nranks: 2
+  control_method: dmg
