DAOS-7968 test: Turn on stack protection in argobots
Update argobots and turn on new feature in CI.

Signed-off-by: Ashley Pittman <ashley.m.pittman@intel.com>

--- a/utils/docker/Dockerfile.centos.7
+++ b/utils/docker/Dockerfile.centos.7
@@ -81,6 +81,7 @@ RUN dnf -y install deltarpm && \
         e2fsprogs \
         file \
         flex \
+        fuse3 \
         fuse3-devel \
         gcc \
         gcc-c++ \
