--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -71,6 +71,7 @@ jobs:
     - name: Update dependencies in image.
       run: docker build . --file utils/docker/Dockerfile.${{ matrix.distro }}
                           --build-arg DAOS_BUILD=no
+                          --build-arg DAOS_TARGET_TYPE=debug
                           --build-arg DEPS_JOBS=10
                           --tag build-image
     - name: Build and Test
