DAOS-623 build: Overhaul the way scons environments are created
Create a new setup_compiler module to handle this.
Export a single base env and allow users to modify it
rather than modifying the core end.
Move the IL complexity into dfuse.

This allows IL and pydaos to use the desired compiler flags
and is a big step to supporting multiple compilers properly
with the corret options in all cases.

Signed-off-by: Ashley Pittman <ashley.m.pittman@intel.com>

--- a/src/common/SConscript
+++ b/src/common/SConscript
@@ -61,10 +61,10 @@ def build_dts_library(env):
 
 def scons():
     """Execute build"""
-    Import('env', 'il_env', 'prereqs')
+    Import('env', 'base_env', 'prereqs')
 
     env.AppendUnique(LIBPATH=[Dir('.')])
-    il_env.AppendUnique(LIBPATH=[Dir('.')])
+    base_env.AppendUnique(LIBPATH=[Dir('.')])
 
     # Hack alert, the argobots headers are required but the shared
     # library isn't so add the dependency so the include path
