--- a/src/SConscript
+++ b/src/SConscript
@@ -29,7 +29,7 @@ def generate_daos_version_header(env):
 def scons():
     """Execute build"""
 
-    Import('env', 'il_env', 'prereqs')
+    Import('env', 'base_env', 'prereqs')
 
     # For Common library (tse.h)
     env.AppendUnique(CPPPATH=[Dir('include/daos').srcnode()])
@@ -47,8 +47,8 @@ def scons():
     # Generic DAOS includes
     env.AppendUnique(CPPPATH=[Dir('include').srcnode()])
     env.AppendUnique(CPPPATH=[Dir('include')])
-    il_env.AppendUnique(CPPPATH=[Dir('include').srcnode()])
-    il_env.AppendUnique(CPPPATH=[Dir('include')])
+    base_env.AppendUnique(CPPPATH=[Dir('include').srcnode()])
+    base_env.AppendUnique(CPPPATH=[Dir('include')])
     generate_daos_version_header(env)
     for header in HEADERS:
         env.Install(os.path.join('$PREFIX', 'include'), 'include/%s' % header)
