--- a/src/client/api/SConscript
+++ b/src/client/api/SConscript
@@ -3,10 +3,10 @@ import daos_build
 
 def scons():
     """Execute build"""
-    Import('env', 'il_env', 'API_VERSION', 'prereqs')
+    Import('env', 'base_env', 'API_VERSION', 'prereqs')
 
     env.AppendUnique(LIBPATH=[Dir('.')])
-    il_env.AppendUnique(LIBPATH=[Dir('.')])
+    base_env.AppendUnique(LIBPATH=[Dir('.')])
     denv = env.Clone()
     prereqs.require(denv, 'protobufc')
     libdaos_tgts = denv.SharedObject(Glob('*.c'))
