--- a/utils/docker/Dockerfile.centos.7
+++ b/utils/docker/Dockerfile.centos.7
@@ -13,7 +13,7 @@ LABEL maintainer="daos@daos.groups.io"
 ARG CB0
 
 # If a local distro repository is supplied, then we should use it
-# and disable using the distro repositories.
+# and disable using the distro repositories that can be mirrored.
 # The Docker image starts out with the DISTRO provided GPG keys
 # on the disk, but not installed.  These must be installed before
 # adding any repo that needs GPG keys but does not provide meta
@@ -62,6 +62,29 @@ repo_gpgcheck=0\n\
 exclude=fuse-3* fuse-devel-3* fuse-libs-3* fuse-debuginfo-3* ompi*\n\
 gpgcheck=0\n" >> /etc/yum.repos.d/local-daos-group.repo;        \
     fi
+
+ARG JENKINS_URL
+ARG REPOS
+RUN for repo in $REPOS; do                                                \
+        branch="master";                                                  \
+        build_number="lastSuccessfulBuild";                               \
+        if [[ $repo = *@* ]]; then                                        \
+            branch="${repo#*@}";                                          \
+            repo="${repo%@*}";                                            \
+            if [[ $branch = *:* ]]; then                                  \
+                build_number="${branch#*:}";                              \
+                branch="${branch%:*}";                                    \
+            fi;                                                           \
+        fi;                                                               \
+        echo -e "[$repo:$branch:$build_number]\n\
+name=$repo:$branch:$build_number\n\
+baseurl=${JENKINS_URL}job/daos-stack/job/$repo/job/$branch/$build_number/artifact/artifacts/centos7/\n\
+enabled=1\n\
+gpgcheck=False\n" >> /etc/yum.repos.d/$repo:$branch:$build_number.repo;   \
+        cat /etc/yum.repos.d/$repo:$branch:$build_number.repo; \
+        dnf repolist; \
+        dnf --disablerepo=\* --enablerepo=$repo:$branch:$build_number makecache; \
+    done
 
 # Install OS updates and package.  Include basic tools and daos dependencies
 # that come from the core repo.
@@ -119,6 +142,7 @@ RUN dnf -y install deltarpm && \
         patch \
         patchelf \
         pciutils \
+        python3-pyelftools \
         python36-Cython \
         python36-devel \
         python36-distro \
@@ -152,31 +176,10 @@ RUN mkdir -p /opt/daos /mnt/daos /var/run/daos_server /var/run/daos_agent &&   \
     chown daos_server.daos_server /opt/daos /mnt/daos /var/run/daos_server &&  \
     chown daos_agent.daos_agent /var/run/daos_agent
 
-# Dependencies
-# Packages for NVML exist in CentOS, but are
-# unfortunately outdated. The DAOS build system will rebuild those packages.
-ARG JENKINS_URL
 ARG QUICKBUILD=false
 ARG QUICKBUILD_DEPS
-ARG REPOS
+
 RUN if $QUICKBUILD; then                                                      \
-        for repo in $REPOS; do                                                \
-            branch="master";                                                  \
-            build_number="lastSuccessfulBuild";                               \
-            if [[ $repo = *@* ]]; then                                        \
-                branch="${repo#*@}";                                          \
-                repo="${repo%@*}";                                            \
-                if [[ $branch = *:* ]]; then                                  \
-                    build_number="${branch#*:}";                              \
-                    branch="${branch%:*}";                                    \
-                fi;                                                           \
-            fi;                                                               \
-            echo -e "[$repo:$branch:$build_number]\n\
-name=$repo:$branch:$build_number\n\
-baseurl=${JENKINS_URL}job/daos-stack/job/$repo/job/$branch/$build_number/artifact/artifacts/centos7/\n\
-enabled=1\n\
-gpgcheck=False\n" >> /etc/yum.repos.d/$repo:$branch:$build_number.repo;       \
-        done;                                                                 \
         echo "Installing: $QUICKBUILD_DEPS";                                  \
         echo "$QUICKBUILD_DEPS" | sed -e '/^$/d' | tr '\n' '\0' |             \
           xargs -0 dnf -y install;                                            \
@@ -195,9 +198,6 @@ RUN if [ "x$BULLSEYE" != "x" ]; then \
       rm -f bullseye.tar; \
       rm -rf bullseye; \
     fi
-
-# Add packages provided by PR-repos that have just been set up.
-RUN dnf -y install python3-pyelftools
 
 # The COPY command has a --chown option but it's not well supported so copy as
 # root then run a chown command which is frustrating as the copy can take a few
@@ -241,6 +241,10 @@ RUN dnf -y upgrade \
     dnf clean all
 USER daos_server:daos_server
 
+# Set a label.  This is useful for searching for DAOS images, but is also used
+# in github-actions to prune elements of the dockerfile below this point.
+LABEL DAOS=stage1
+
 WORKDIR /home/daos/daos/
 COPY VERSION LICENSE ftest.sh SConstruct ./
 COPY site_scons site_scons
@@ -266,6 +270,10 @@ RUN [ "$DAOS_BUILD" != "yes" ] || \
 # Set environment variables
 ENV PATH=/opt/daos/bin:$PATH
 ENV FI_SOCKETS_MAX_CONN_RETRY=1
+
+USER root:root
+LABEL DAOS=true
+USER daos_server:daos_server
 
 # Build java and hadoop bindings
 WORKDIR /home/daos/daos/src/client/java
