--- a/src/vos/storage_estimator/SConscript
+++ b/src/vos/storage_estimator/SConscript
@@ -1,4 +1,5 @@
 """Install DAOS Storage Estimador"""
+import sys 
 
 def install_storage_estimator_module(env, lib_prefix, version):
     """Install Storage Estimador module for the specified python version"""
@@ -7,17 +8,19 @@ def install_storage_estimator_module(env, lib_prefix, version):
         return
 
     denv = env.Clone()
+    if version == "3.6":
+        install_path = lib_prefix + "/python"
+        install_path += version + "/site-packages/storage_estimator"
 
-    install_path = lib_prefix + "/python"
-    install_path += version + "/site-packages/storage_estimator"
-
-    denv.Install(install_path, "common/vos_structures.py")
-    denv.Install(install_path, "common/__init__.py")
-    denv.Install(install_path, "common/dfs_sb.py")
-    denv.Install(install_path, "common/vos_size.py")
-    denv.Install(install_path, "common/explorer.py")
-    denv.Install(install_path, "common/parse_csv.py")
-    denv.Install(install_path, "common/util.py")
+        denv.Install(install_path, "common/vos_structures.py")
+        denv.Install(install_path, "common/__init__.py")
+        denv.Install(install_path, "common/dfs_sb.py")
+        denv.Install(install_path, "common/vos_size.py")
+        denv.Install(install_path, "common/explorer.py")
+        denv.Install(install_path, "common/parse_csv.py")
+        denv.Install(install_path, "common/util.py")
+    else:
+        raise Exception("Unsupported python version %s" % version)
 
 def scons():
     """Execute build"""
@@ -25,8 +28,9 @@ def scons():
 
     denv = env.Clone()
     denv.Install("$PREFIX/bin/", "daos_storage_estimator.py")
-
-    install_storage_estimator_module(env, '$PREFIX/lib64/', "3.6")
+    python_version = "{}.{}".format(
+        sys.version_info.major, sys.version_info.minor)
+    install_storage_estimator_module(env, '$PREFIX/lib64/', python_version)
 
 if __name__ == "SCons.Script":
     scons()
