DAOS-7707 tests: Adding method to adjust pool size to the configuration. (#5940)
Adding two new TestWithServers methods to allow tests to create pools
that utilize a percentage of the available SCM and/or NVMe space
configured by the active servers.  These methods also provide the option
of reducing the number of targets per engine in the server configuration
if the current server configuration cannot support the requested pool
size.

Signed-off-by: Phillip Henderson <phillip.henderson@intel.com>

--- a/src/tests/ftest/erasurecode/ec_ior_smoke.yaml
+++ b/src/tests/ftest/erasurecode/ec_ior_smoke.yaml
@@ -39,11 +39,10 @@ server_config:
       scm_mount: /mnt/daos1
       log_mask: ERR
 pool:
-    mode: 146
     name: daos_server
-    scm_size: 200G
-    nvme_size: 700G
     control_method: dmg
+    scm_size: 25%
+    nvme_size: 93%
 container:
     type: POSIX
     control_method: daos
