--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -76,6 +76,7 @@ jobs:
                           --tag build-image
     - name: Build and Test
       run: ./utils/run_in_ga_wrapper.sh
+      timeout-minutes: 30
     - name: Publish NLT test results
       if: always()
       uses: EnricoMi/publish-unit-test-result-action@v1.17
