Set build_type as well.
Signed-off-by: Ashley Pittman <ashley.m.pittman@intel.com>

--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -115,16 +115,18 @@ jobs:
                           --build-arg DAOS_BUILD=no
                           --build-arg DAOS_TARGET_TYPE=debug
                           --build-arg DEPS_JOBS=10
-    - name: Build in docker.
+    - name: Build release in docker.
       run: docker build . --file utils/docker/Dockerfile.${{ matrix.distro }}
                           --build-arg DAOS_JAVA_BUILD=no
                           --build-arg DAOS_TARGET_TYPE=debug
                           --build-arg DEPS_JOBS=10
+                          --build-arg DAOS_BUILD_TYPE=release
                           --build-arg COMPILER=${{ matrix.compiler }}
     - name: Build Java in docker.
       run: docker build . --file utils/docker/Dockerfile.${{ matrix.distro }}
                           --build-arg DAOS_TARGET_TYPE=debug
                           --build-arg DEPS_JOBS=10
+                          --build-arg DAOS_BUILD_TYPE=release
                           --build-arg COMPILER=${{ matrix.compiler }}
     - name: Build debug in docker.
       run: docker build . --file utils/docker/Dockerfile.${{ matrix.distro }}
