DAOS-7821 ga: Update doxygen handler.
Move from multiple steps in ga into a single shell script.

This allows us to exit earlier if no headers are modified.
Only test headers in src/include, not subdirs.

Kill already running jobs in github actions.

Signed-off-by: Ashley Pittman <ashley.m.pittman@intel.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,10 @@ on:
        - 'release/*'
    pull_request:
 
+concurrency:
+  group: ci-${{ github.head_ref }}
+  cancel-in-progress: true
+
 jobs:
 
   Build:
