--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -7,6 +7,10 @@ on:
        - 'release/*'
    pull_request:
 
+concurrency:
+  group: spelling-${{ github.head_ref }}
+  cancel-in-progress: true
+
 jobs:
 
   Spelling:
