Make the base_env work properly so that code can link.
Signed-off-by: Ashley Pittman <ashley.m.pittman@intel.com>

--- a/src/cart/SConscript
+++ b/src/cart/SConscript
@@ -60,7 +60,9 @@ def scons():
     SConscript('swim/SConscript')
 
     Import('env', 'prereqs', 'swim_targets', 'CART_VERSION')
-    Import('conf_dir')
+    Import('conf_dir', 'base_env')
+
+    base_env.AppendUnique(LIBPATH=[Dir('.')])
 
     env.Alias('install', '$PREFIX')
 
