--- a/src/gurt/SConscript
+++ b/src/gurt/SConscript
@@ -12,8 +12,9 @@ SRC = ['debug.c', 'dlog.c', 'hash.c', 'misc.c', 'heap.c', 'errno.c',
 def scons():
     """Scons function"""
 
-    Import('env', 'prereqs', 'CART_VERSION')
+    Import('base_env', 'env', 'prereqs', 'CART_VERSION')
 
+    base_env.AppendUnique(LIBPATH=[Dir('.')])
     env.AppendUnique(LIBPATH=[Dir('.')])
     env.AppendUnique(CPPPATH=[Dir('.').srcnode()])
 
