--- a/src/tests/SConscript
+++ b/src/tests/SConscript
@@ -25,7 +25,7 @@ def scons():
     denv.AppendUnique(RPATH_FULL=['$PREFIX/lib64/daos_srv'])
 
     denv.Append(CPPPATH=[Dir('suite').srcnode()])
-    prereqs.require(denv, 'argobots', 'hwloc', 'protobufc', 'pmdk')
+    prereqs.require(denv, 'argobots', 'hwloc', 'protobufc', 'pmdk', 'isal')
 
     daos_build.program(denv, 'simple_array', 'simple_array.c', LIBS=libs)
     daos_build.program(denv, 'simple_obj', 'simple_obj.c', LIBS=libs)
