--- a/src/vos/SConscript
+++ b/src/vos/SConscript
@@ -48,9 +48,10 @@ def build_vos_internal(env):
 
 def scons():
     """Execute build"""
-    Import('env', 'prereqs')
+    Import('env', 'base_env', 'prereqs')
 
     env.AppendUnique(LIBPATH=[Dir('.')])
+    base_env.AppendUnique(LIBPATH=[Dir('.')])
 
     if not prereqs.server_requested():
         return
