Install pyelftools via pip on EL
Since our built package is not accessible for the outside world (yet).

Quick-Functional: true
Skip-func-test-el8: false
Skip-func-test-leap15: false

Signed-off-by: Brian J. Murrell <brian.murrell@intel.com>

--- a/utils/docker/Dockerfile.centos.7
+++ b/utils/docker/Dockerfile.centos.7
@@ -142,7 +142,7 @@ RUN dnf -y install deltarpm && \
         patch \
         patchelf \
         pciutils \
-        python3-pyelftools \
+        python3-pip \
         python36-Cython \
         python36-devel \
         python36-distro \
@@ -160,6 +160,11 @@ RUN dnf -y install deltarpm && \
         valgrind-devel \
         yasm && \
     dnf clean all
+
+# DPDK/SPDK needs pyelftools now
+# Longer term, we should upload our RPM build of this to the public packaging
+# site and install it by RPM, but for now, we'll just pip install it
+RUN pip3 install pyelftools
 
 ARG UID=1000
 
