Fixing default values minor errors in README

--- a/examples/daos_client_mig/terraform.tfvars.example
+++ b/examples/daos_client_mig/terraform.tfvars.example
@@ -5,7 +5,7 @@ subnetwork_project = "<my_project_id>"
 region = "europe-west4"
 zone = "europe-west4-a"
 
-number_of_instances = 5
+number_of_instances = 2
 
 instance_base_name = "daos-client"
 os_disk_size_gb = 20
@@ -16,4 +16,4 @@ machine_type = "n2-highmem-16" # 10x physical cores, using 8x targets
 
 # the image must be built before (see build folder)
 os_project = "<my_project_id>"
-os_family = "daos_server"
+os_family = "daos_client"
