DAOS-623 build: Resolve minor issues with Dockerfiles.
Use pip3 --user
Do not install pandoc, curl, man or doxygen.
Move leap15 from 15.2 to 15.3
Move leap15 to ci2.
Install missing packages to run NLT in docker.

Signed-off-by: Ashley Pittman <ashley.m.pittman@intel.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        distro: [centos.7, leap.15]
+        distro: [centos.7]
         compiler: [gcc, clang]
     steps:
     - name: Checkout code
