--- a/utils/docker/Dockerfile.centos.7
+++ b/utils/docker/Dockerfile.centos.7
@@ -100,11 +100,11 @@ RUN dnf -y install deltarpm && \
         clang-analyzer \
         cmake \
         CUnit-devel \
-        doxygen \
         e2fsprogs \
         file \
         flex \
         fuse3-devel \
+        fuse3 \
         gcc \
         gcc-c++ \
         git \
@@ -128,17 +128,14 @@ RUN dnf -y install deltarpm && \
         Lmod \
         lz4-devel \
         make \
-        man \
         maven \
         meson \
-        nasm \
         ndctl \
         ninja-build \
         numactl \
         numactl-devel \
         openmpi3-devel \
         openssl-devel \
-        pandoc \
         patch \
         patchelf \
         pciutils \
@@ -161,11 +158,6 @@ RUN dnf -y install deltarpm && \
         yasm && \
     dnf clean all
 
-# DPDK/SPDK needs pyelftools now
-# Longer term, we should upload our RPM build of this to the public packaging
-# site and install it by RPM, but for now, we'll just pip install it
-RUN pip3 install pyelftools
-
 ARG UID=1000
 
 # Add DAOS users
@@ -180,6 +172,13 @@ RUN echo "daos_server ALL=(root) NOPASSWD: ALL" >> /etc/sudoers.d/daos_sudo_setu
 RUN mkdir -p /opt/daos /mnt/daos /var/run/daos_server /var/run/daos_agent &&   \
     chown daos_server.daos_server /opt/daos /mnt/daos /var/run/daos_server &&  \
     chown daos_agent.daos_agent /var/run/daos_agent
+
+# DPDK/SPDK needs pyelftools now
+# Longer term, we should upload our RPM build of this to the public packaging
+# site and install it by RPM, but for now, we'll just pip install it
+USER daos_server:daos_server
+RUN pip3 --no-cache-dir --disable-pip-version-check install --user pyelftools
+USER root:root
 
 ARG QUICKBUILD=false
 ARG QUICKBUILD_DEPS
