--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -13,13 +13,5 @@ jobs:
       uses: actions/checkout@v2.3.4
       with:
         fetch-depth: 100
-    - name: Install software
-      run: sudo apt-get install doxygen
-    - name: Check files
+    - name: Run check
       run: ./ci/copy_doxygen_files.sh
-    - name: Add problem matcher
-      run: echo ::add-matcher::ci/daos-doxygen-matcher.json
-    - name: Run
-      run: doxygen Doxyfile
-    - name: Remove matcher
-      run: echo "::remove-matcher owner=daos-doxygen::"
