--- a/utils/build.config
+++ b/utils/build.config
@@ -3,7 +3,7 @@ component=daos
 
 [commit_versions]
 ARGOBOTS = v1.1
-PMDK = 1.11.0-rc1
+PMDK = 1.11.0
 ISAL = v2.30.0
 ISAL_CRYPTO = v2.23.0
 SPDK = 7232c450f97cf925a521a60ef2561eca4b65c41a
