--- a/src/cart/SConscript
+++ b/src/cart/SConscript
@@ -22,6 +22,16 @@ SRC = ['crt_bulk.c', 'crt_context.c', 'crt_corpc.c',
        'crt_swim.c', 'crt_tree.c', 'crt_tree_flat.c', 'crt_tree_kary.c',
        'crt_tree_knomial.c', 'crt_hlc.c', 'crt_hlct.c']
 
+LIB_SRC = ['crt_utils.c']
+
+####################################
+# Create cart utility share objects
+####################################
+def build_utility_shared_obj(denv):
+    """Build cart utility library"""
+    cart_utils_objs  = denv.SharedObject(LIB_SRC)
+    Export('cart_utils_objs')
+
 # pylint: disable=unused-argument
 def macro_expand(target, source, env):
     """Function for PostAction"""
@@ -58,8 +68,9 @@ def scons():
 
     # Generate the common libraries used by everyone
     SConscript('swim/SConscript')
+    Default('swim')
 
-    Import('env', 'prereqs', 'swim_targets', 'CART_VERSION')
+    Import('env', 'prereqs', 'swim_targets', 'gurt_lib', 'CART_VERSION')
     Import('conf_dir')
 
     env.Alias('install', '$PREFIX')
@@ -69,11 +80,17 @@ def scons():
     env.AppendUnique(LINKFLAGS=["-Wl,-rpath-link=%s" % Dir('.').path])
     env.AppendUnique(CPPPATH=[Dir('.').srcnode()])
     env.AppendUnique(CPPPATH=[Dir('include').srcnode()])
+    env.AppendUnique(CPPPATH=[Dir('../gurt').srcnode()])
     for header in HEADERS:
         env.Install(os.path.join('$PREFIX', 'include', 'cart'),
                     os.path.join('../include', 'cart', header))
 
+    prereqs.require(env, 'mercury', headers_only=True)
+
     denv = env.Clone(LIBS=[])
+
+    # Generate cart utility shared objects
+    build_utility_shared_obj(denv)
 
     denv.AppendUnique(LIBS=['gurt'])
     prereqs.require(denv, 'mercury')
@@ -93,10 +110,12 @@ def scons():
 
     cart_lib = daos_build.library(denv, 'libcart', [cart_targets, swim_targets],
                                   SHLIBVERSION=CART_VERSION)
+    denv.Requires(cart_lib, [swim_targets, gurt_lib])
     denv.InstallVersionedLib('$PREFIX/lib64/', cart_lib,
                              SHLIBVERSION=CART_VERSION)
 
-    Export('cart_targets')
+    Default(cart_lib)
+    Export('cart_lib', 'cart_targets')
 
     if not env.GetOption('clean') and not env.GetOption('help'):
 
