--- a/src/tests/ftest/cart/SConscript
+++ b/src/tests/ftest/cart/SConscript
@@ -62,43 +62,61 @@ FAULT_STATUS_TEST = 'fault_status.c'
 def scons():
     """scons function"""
 
-    Import('env', 'prereqs')
+    Import('env', 'prereqs', 'cart_lib', 'gurt_lib')
+    Import('cart_utils_objs')
 
+    ##############################
+    # Create test programs
+    ##############################
     tenv = env.Clone()
 
+    tenv.AppendUnique(CPPPATH=['#/src/cart/src/cart'])
     tenv.AppendUnique(LIBS=['cart', 'gurt', 'pthread', 'm'])
     prereqs.require(tenv, 'crypto', 'mercury')
+    tenv.AppendUnique(LIBPATH=[Dir('.')])
 
     tests_dir = os.path.join("$PREFIX", 'lib', 'daos', 'TESTING', 'tests')
     # Compile all of the tests
     for test in SIMPLE_TEST_SRC:
-        target = daos_build.test(tenv, test, install_off='../../../../')
+        target = daos_build.test(tenv, [test, cart_utils_objs],
+                                 install_off='../../../../')
+        tenv.Requires(target, [cart_lib, gurt_lib])
         tenv.Install(tests_dir, target)
 
     for test in IV_TESTS:
-        target = daos_build.test(tenv, test, install_off='../../../../')
+        target = daos_build.test(tenv, [test, cart_utils_objs],
+                                 install_off='../../../../')
+        tenv.Requires(target, [cart_lib, gurt_lib])
         tenv.Install(tests_dir, target)
 
     for test in SWIM_TESTS:
-        target = daos_build.test(tenv, test, install_off='../../../../')
+        target = daos_build.test(tenv, [test, cart_utils_objs],
+                                 install_off='../../../../')
+        tenv.Requires(target, [cart_lib, gurt_lib])
         tenv.Install(tests_dir, target)
 
     for test in HLC_TESTS:
-        target = daos_build.test(tenv, test, install_off='../../../../')
+        target = daos_build.test(tenv, [test, cart_utils_objs],
+                                 install_off='../../../../')
+        tenv.Requires(target, [cart_lib, gurt_lib])
         tenv.Install(tests_dir, target)
 
     for test in TEST_GROUP_NP_TESTS:
-        target = daos_build.test(tenv, test, install_off='../../../../')
+        target = daos_build.test(tenv, [test, cart_utils_objs],
+                                 install_off='../../../../')
+        tenv.Requires(target, [cart_lib, gurt_lib])
         tenv.Install(tests_dir, target)
 
     # Build FAULT_STATUS_TEST separately and install it into bin/
     target = daos_build.test(tenv, FAULT_STATUS_TEST)
+    tenv.Requires(target, [cart_lib, gurt_lib])
     tenv.Install(os.path.join("$PREFIX", 'bin'), target)
 
     benv = tenv.Clone()
 
     benv.AppendUnique(CFLAGS=['-std=gnu99', '-pedantic'])
-    daos_build.test(tenv, BASIC_SRC)
+    basic_target = daos_build.test(tenv, BASIC_SRC)
+    benv.Requires(basic_target, [cart_lib, gurt_lib, cart_utils_objs])
 
     # Call scons on unit test directory
     SConscript('utest/SConscript')
