--- a/src/tests/ftest/daos_test/daos_core_test-nvme_recovery.yaml
+++ b/src/tests/ftest/daos_test/daos_core_test-nvme_recovery.yaml
@@ -5,6 +5,9 @@ hosts:
     - server-A
     - server-B
 timeout: 600
+#Remove this once DAOS-5134 is resolved
+setup:
+  start_servers_once: False
 pool:
   scm_size: 8G
   nvme_size: 16G
