--- a/src/tests/ftest/soak/soak_smoke.yaml
+++ b/src/tests/ftest/soak/soak_smoke.yaml
@@ -54,14 +54,12 @@ server_config:
                 - FI_UNIVERSE_SIZE=2048
 # pool_params - attributes of the pools to create; Currently only create one
 pool_jobs:
-    mode: 146
     name: daos_server
     scm_size: 30GB
     nvme_size: 500GB
-    svcn: 1
+    properties: reclaim:time,ec_cell_sz:64KiB
     control_method: dmg
 pool_reserved:
-    mode: 511
     name: daos_server
     scm_size: 3GB
     nvme_size: 50GB
@@ -72,7 +70,8 @@ container:
     control_method: daos
 container_reserved:
     type: POSIX
-    properties: cksum:crc16,cksum_size:16384,srv_cksum:on
+    properties: cksum:crc16,cksum_size:16384,srv_cksum:on,rf:1
+    oclass: EC_2P1GX
     control_method: daos
 # test_params - Defines the type of test to run and how long it runs
 #               It also defines how many pools and jobs to create
