--- a/src/tests/ftest/io/posix_stat.yaml
+++ b/src/tests/ftest/io/posix_stat.yaml
@@ -1,19 +1,33 @@
+# hosts:
+#   test_servers:
+#     - server-A
+#   test_clients:
+#     - client-B
+# timeout: 600
+# pool:
+#   scm_size: 10G
+#   control_method: dmg
+# container:
+#   type: POSIX
+#   control_method: daos
+# #block_sizes: [1M, 10M, 100M, 500M]
+# block_sizes: [1M]
+# ior:
+#   api: POSIX
+#   flags: "-v -w -k"
+#   max_duration: 10
+# dfuse:
+#   mount_dir: "/tmp/daos_dfuse"
+
+
 hosts:
   test_servers:
     - server-A
-  test_clients:
-    - client-B
-timeout: 600
+timeout: 60
+server_config:
+  name: daos_server
 pool:
-  scm_size: 10G
+  mode: 511
+  name: daos_server
+  scm_size: 1073741824
   control_method: dmg
-container:
-  type: POSIX
-  control_method: daos
-block_sizes: [1M, 10M, 100M, 500M]
-ior:
-  api: POSIX
-  flags: "-v -w -k"
-  max_duration: 10
-dfuse:
-  mount_dir: "/tmp/daos_dfuse"
