DAOS-3769 test: debug
Quick-build: true
Skip-unit-tests: true
Test-tag: basic_cont
Signed-off-by: Makito Kano <makito.kano@intel.com>

--- a/src/tests/ftest/io/posix_stat.yaml
+++ b/src/tests/ftest/io/posix_stat.yaml
@@ -1,8 +1,8 @@
 hosts:
   test_servers:
     - server-A
-  test_clients:
-    - client-A
+  # test_clients:
+  #   - client-A
 timeout: 600
 pool:
   scm_size: 10G
