--- a/src/tests/ftest/io/posix_stat.yaml
+++ b/src/tests/ftest/io/posix_stat.yaml
@@ -5,8 +5,11 @@ hosts:
   #   - client-A
 timeout: 600
 pool:
-  scm_size: 10G
+  mode: 511
+  name: daos_server
+  scm_size: 1073741824
   control_method: dmg
+  #scm_size: 10G
 container:
   type: POSIX
   control_method: daos
